assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Niconne&display=swap');

/* General styling  */

body,
html {
    height: 100vh;
    width: 100vw;
    font-family: 'IBM Plex Sans', sans-serif;
}

body {
    background-image: url("/assets/images/pexels-daria-shevtsova-1578248.jpg");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    overflow: hidden;
}

@font-face {
    font-family: 'customFont';
    src: url('../fonts/Peignot.ttf');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'customFont2';
    src: url('../fonts/Cafe-Francoise_D.ttf');
    font-weight: normal;
    font-style: normal;
}

/*     THIS CONTENT IS FROM https://www.w3schools.com/howto/howto_css_dropdown_navbar.asp and shall be credited as such in the ReadMe     */
.dropdown {
    float: left;
    overflow: hidden;
    width: 15%;
    text-align: center;
}

.dropdown .dropbtn {
    font-size: 60px;
    font-weight: bolder;
    line-height: 40px;
    padding-top: 10%;
    padding-bottom: 10%;
    padding-left: 0;
    border: none;
    outline: none;
    color: white;
    background-color: inherit;
    font-family: customFont;
    margin: 0;
    text-shadow: -1px 1px 1px #000,
        1px 1px 1px #000,
        1px -1px 0 #000,
        -1px -1px 0 #000;
}

#hr {
    padding-bottom: 0;
    margin-bottom: 0;
}

.navbar a:hover,
.dropdown:hover .dropbtn {
    color: red;
}

.dropdown-content {
    display: none;
    position: absolute;
    background-color: #f9f9f9;
    min-width: 200px;
    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
    z-index: 1;
    margin-left: 2%;
    font-family: customFont2;
}

.dropdown-content a {
    float: none;
    color: black;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
    text-align: center;
}

.dropdown-content a:hover {
    background-color: #ddd;
}

/* Show the dropdown menu on hover */
.dropdown:hover .dropdown-content {
    display: block;
}

/*      END OF CONTENT FROM https://www.w3schools.com/howto/howto_css_dropdown_navbar.asp     */

.buttons {
    background-color: #0300ad;
    color: white;
    border: none;
    cursor: pointer;
    border-radius: 5px;
    text-align: center;
    font-size: 20px;
    padding: 16px 30px;
    display: table-cell;
    vertical-align: middle;
    letter-spacing: 6px;
    border: solid 1px black;
}

.buttons:hover {
    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
    font-weight: bold;
}

.buttons :disabled {
    font-style: italic;
}

#main-div {
    width: 60%;
    height: 75%;
    border: solid 1px rgb(128, 128, 128);
    /* background-color: white; */
    box-shadow: 5px 10px 8px 10px #888888;
    top: 15%;
    left: 5%;
    position: relative;
    overflow: auto;
    z-index: 5;
    background-image: url("../images/wooden-sign.JPG");
    background-position: center;
    background-size: 100% 100%;
    background-repeat: no-repeat;
    /* background-size: cover; */
    /* opacity: 0.9; */
}

#resources-main-div {
    width: 60%;
    height: 75%;
    border: solid 1px rgb(128, 128, 128);
    background-color: white;
    box-shadow: 5px 10px 8px 10px #888888;
    top: 15%;
    left: 5%;
    position: relative;
    overflow: auto;
}

#resources-main-div h1,
#resources-main-div h2,
#resources-main-div h3 {
    text-align: center;
    padding-top: 20px;
}

#resources-main-div ul {
    list-style-type: square;
    margin-left: 25%;
    width: 50%;
}

#resources-main-div ul li {
    padding: 5px 0px;
}

/* Main screens */
#intro-screen-div,
#end-game-div {
    width: 100%;
    height: 100%;
    margin: auto;
}

/* Intro Screen Styling */
#intro-screen-div {
    overflow: hidden;
}

#intro-screen-welcome {
    font-family: customFont2;
    letter-spacing: 8px;
    word-spacing: 20px;
    text-align: left;
    position: relative;
    left: 6%;
    margin-top: 9%;
    font-size: 3.5vw;
    margin-bottom: 0;
}

#intro-screen-game-title {
    font-size: 10vw;
    font-family: customFont;
    letter-spacing: 4px;
    color: rgba(228, 41, 41, 0.966);
    text-shadow: -1px 3px 3px #000,
        3px 3px 3px #000,
        3px -1px 0 #000,
        -1px -1px 0 #000;
    text-align: center;
    margin-top: 0;
    margin-bottom: 0;
    line-height: 140px;
}

#intro-screen-transl {
    text-align: right;
    font-family: 'Niconne', cursive;
    margin-top: 0;
    position: relative;
    right: 30%;
    font-size: 3vw;
}

#intro-screen-game-des {
    margin-top: 5%;
    font-size: 2vw;
    padding: 0;
    margin-bottom: 0;
}

#intro-screen-btn {
    width: 200px;
    margin-left: calc(50% - 100px);
    height: 50px;
    text-align: center;
    margin-bottom: 80px;
}

/* Input Name Screen Styling */

#input-name-div {}

#input-name-text {
    margin-top: 20%;
    text-align: center;
    font-size: 2.5vw;
}

#input-name-input {
    text-align: center;
    width: 45%;
    height: 50px;
    font-size: 2vw;
    margin-left: calc(50% - 22.5%);
    margin-top: 3%;
}

#input-name-btn {
    width: 20%;
    display: block;
    margin: auto;
    margin-top: 5%;
}

/* Game Options Screen Styling */

#game-options-div {
    text-align: center;
    position: relative;
    top: 5%;
    z-index: 8;
}

#game-options-welcome-name {
    font-size: 40px;
}

#game-options-text {
    margin-top: 5%;
    font-size: 30px;
}

#game-difficulty-form {
    margin-top: 5%;
}

#game-difficulty-form input {
    margin-left: 60px;
    margin-right: 30px;
}

#game-difficulty-form label {
    font-size: 25px;
}

#game-options-difficulty-text,
#game-options-length-text {
    font-size: 30px;
}

#game-options-length-text {
    margin-top: 5%;
}

#game-options-btn {
    margin-top: 4%;
    margin-bottom: 5%;
}

/* Open Game Area Styling */

#game-area-div {
    width: 100%;
    height: 100%;
    display: flex;
}

#game-area-left {
    width: 70%;
    height: 100%;
    float: left;
}
/* ... */

